--- a/src/assets/css/mixin.less
+++ b/src/assets/css/mixin.less
@@ -9,8 +9,14 @@
         // width: 10%;
         text-align: center;
         margin: 5px auto;
-        border: 1px solid #1ebbf0; // transition: all 2s ease-in-out;
+        border: 2px solid #1ebbf0; // transition: all 2s ease-in-out;
     }
+}
+.menu-title {
+    font-size: 14px;
+}
+.pro-span {
+    font-size: 20px;
 }
 .title:hover {
     &::after {
