[Modify]修改首页结构和布局

--- a/src/assets/css/mixin.less
+++ b/src/assets/css/mixin.less
@@ -40,18 +40,18 @@
         width: 10%;
     }
 }
-.pro-step:hover {
+.img-content:hover {
   border: 2px solid rgba(0,180,220,0.5);
-  filter: brightness(1.2);
   animation: glow 1s infinite alternate linear;
 }
+
+
+
 @-webkit-keyframes glow {
   0% {
     -webkit-box-shadow: 0 0 18px rgba(72, 106, 170, 0.5);
-    transform: scale(.9);
   }
   100% {
     -webkit-box-shadow: 0 0 18px #00c1cf, 0 0 30px #5472d2;
-    transform: scale(1.1);
   }
 }
