--- a/src/assets/css/mixin.less
+++ b/src/assets/css/mixin.less
@@ -12,6 +12,14 @@
         border: 1px solid #1ebbf0; // transition: all 2s ease-in-out;
     }
 }
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+
+}
 .menu-title {
     font-size: 14px;
 }
